# mashinato-bot

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements-prod.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml
bot/: __main__.py  config.py
bot/callbacks/: factory.py
bot/db/: models.py  session.py
bot/handlers/: account.py  audit.py  auth.py  common.py  menu.py  optimization.py  policies.py  rental.py  search.py  settings.py  start.py  subscriptions.py  transfer.py  vehicles.py  webhooks.py
bot/handlers/admin/: dispatcher.py  droplets.py  ipv6.py  monitoring.py  system.py
bot/keyboards/: account.py  builders.py  confirm.py  main_menu.py  pagination.py  rental.py  search.py
bot/middlewares/: auth.py  throttle.py
bot/notifications/: dispatcher.py
bot/services/: api_client.py  auth_service.py
bot/states/: optimization.py  rental.py  search.py  webhook.py
bot/texts/: fa.py
bot/web/: server.py
k8s/argocd/: application.yaml
k8s/base/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  secret.yaml  service.yaml
k8s/overlays/production/: ingress.yaml  kustomization.yaml
tests/: conftest.py
tests/test_middlewares/: test_throttle.py
tests/test_services/: test_api_client.py  test_auth_service.py
tests/test_web/: test_server.py
